2011-03-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-update-read-articles): Fix typo.

	* gnus.el (gnus-valid-select-methods): Mark nnimap as a backend that
	really have server-side marks.

	* gnus-sum.el (gnus-propagate-marks): Change default back to nil again,
	since most backends do not usefully have server-side marks.
	(gnus-update-read-articles): Propagate marks to all backends that
	really have server-side marks.

2011-03-05  Antoine Levitt  <antoine.levitt@gmail.com>

	* message.el (message-cite-reply-position, message-cite-style): New
	variables.
	(message-yank-original): Use the new citation styles.

2011-03-04  Daiki Ueno  <ueno@unixuser.org>

	* message.el (message-options): Revert 22da67af (workaround for XEmacs
	buffer-local issue); don't mark it buffer-local when running under
	XEmacs.

2011-03-03  Tassilo Horn  <tassilo@member.fsf.org>

	* nnimap.el (nnimap-parse-flags): Add a workaround for FETCH lines with
	numbers too big to be `read'.

2011-03-02  Teodor Zlatanov  <tzz@lifelogs.com>

	* password-cache.el (password-in-cache-p): Add autoload.

	* message.el (message-options): Make buffer-local two ways to attempt
	to fix a XEmacs bug.

2011-03-02  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (gnus-with-article-buffer): Fix buffer live check.

2011-03-01  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (list-identifier): Add list-identifier as a parameter
	group.
	(article-hide-list-identifiers): Use list-identifier group parameter.

2011-02-28  Julien Danjou  <julien@danjou.info>

	* sieve.el (sieve-buffer-script-name): New local variable to store
	sieve script name.
	(sieve-edit-script): Store sieve script name.
	(sieve-upload): Use sieve script name when uploading.
	(sieve-upload): Use substitute-command-keys.
	(sieve-edit-script): Use substitute-command-keys.
	(sieve-refresh-scriptlist): Use substitute-command-keys.
	(sieve-manage-mode-map): Define keymap properly.